# multisensor-lmb-filters-rs

./: .gitignore  .gitmodules  BENCHMARK_BASELINE.md  CLAUDE.md  Cargo.toml  DATA_SUMMARY.md  LICENSE  LICENSE-APACHE  LICENSE-MIT  MIGRATE.md  Makefile  PLAN.md  PORTING_HISTORY.md  PROGRESS.md  PROGRESS_v2.md  README.md  README_BENCHMARKS.md  REFACTOR.md  REFACTOR_PLAN.md  comparison_lbp.md  comparison_lmb_filter.md  debug_gibbs.py  debug_gibbs_simple.py  pyproject.toml  quality_analysis_summary.md  show_matlab_samples.py
.claude/: CLAUDE.md  settings.local.json
.claude/agents/: code-patcher.md  differential-analyzer.md  fixture-comparator.md  matlab-reference.md  octave-rust-debugger.md  root-cause-investigator.md  rust-octave-tracer.md  source-inspector.md  test-analyzer.md
.github/workflows/: ci.yml  release.yml
benches/: lmb_filters.rs  lmb_performance.rs  scenario_benchmark.rs
benchmarks/: .gitignore  QUICK_START.md  README.md  consolidate_results.py  generate_matlab_fixtures.m  generate_plots.py  generate_scenarios.py  run_all_benchmarks.sh  run_benchmarks.sh  run_python.py  run_quick_benchmark.sh  test_matlab_fixtures.py
benchmarks/fixtures/: bouncing_n10_s1_LMB_LBP.json  bouncing_n10_s2_AA_LMB_LBP.json  bouncing_n10_s2_GA_LMB_LBP.json  bouncing_n10_s2_IC_LMB_LBP.json  bouncing_n10_s2_PU_LMB_LBP.json  bouncing_n10_s4_AA_LMB_LBP.json  bouncing_n10_s4_GA_LMB_LBP.json  bouncing_n10_s4_IC_LMB_LBP.json  bouncing_n10_s4_PU_LMB_LBP.json  bouncing_n5_s1_LMB_LBP.json  bouncing_n5_s2_AA_LMB_LBP.json  bouncing_n5_s2_GA_LMB_LBP.json  bouncing_n5_s2_IC_LMB_LBP.json  bouncing_n5_s2_PU_LMB_LBP.json
benchmarks/results/: cache.csv
benchmarks/run_benchmarks/: generate_plots.py  run_octave.m  run_python.py  run_rust.rs
benchmarks/runners/: run_octave.m  run_python.py  run_rust.rs
benchmarks/scenarios/: bouncing_n10_s1.json  bouncing_n10_s2.json  bouncing_n10_s4.json  bouncing_n20_s1.json  bouncing_n20_s2.json  bouncing_n20_s4.json  bouncing_n20_s8.json  bouncing_n50_s8.json  bouncing_n5_s1.json  bouncing_n5_s2.json
docs/00_io/: DATA.md
docs/01_migration/: migration_plan.md
docs/02_migration_comparison/: comparison_analysis.md  comparison_partial_lmb_association.md  comparison_partial_lmb_cardinality.md  comparison_partial_lmb_prediction.md  comparison_partial_lmb_update.md
docs/03_optimisations/: benchmarks.md  changelog.md  improvements_possible.md  profiling_results.md  todos.md
docs/04_optim_part_2/: plan.md
examples/: compare_methods_t25.rs  debug_cost_matrix.rs  debug_ic_lmb.rs  debug_murty.rs  debug_murty_detailed.rs  debug_pu_lmb_t0.rs  multi_sensor.rs  multisensor_ic_lmb.rs  multisensor_lmbm.rs  multisensor_parallel_lmb.rs  single_sensor.rs  single_sensor_lmb.rs  single_sensor_lmbm.rs
python/multisensor_lmb_filters_rs/: __init__.py  _multisensor_lmb_filters_rs.pyi
python/prak/: __init__.py
python/tests/: conftest.py  test_benchmark_fixtures.py  test_equivalence.py  test_fixture_determinism.py
scripts/bench_cross_lang/: _cache.csv  _run_python.py  _run_rust.rs  run.sh
scripts/generate/: generate_matlab_fixtures.m  generate_scenarios.py
src/: bench_utils.rs  builder.rs  cardinality.rs  config.rs  factory.rs  fusion_ms.rs  lib.rs  measurements.rs  output.rs  reporter.rs  scheduler.rs  strategy.rs  traits.rs  traits_ms.rs  unified.rs
src/association/: builder.rs  likelihood.rs  mod.rs
src/common/: ground_truth.rs  linalg.rs  metrics.rs  mod.rs  model.rs  rng.rs  types.rs  utils.rs
src/components/: mod.rs  prediction.rs  update.rs
src/filter/: common_ops.rs  errors.rs  lmb.rs  lmbm.rs  mod.rs  multisensor_lmb.rs  multisensor_lmbm.rs  multisensor_traits.rs  traits.rs
src/lmb/: association.rs  builder.rs  cardinality.rs  common_ops.rs  config.rs  core.rs  core_lmbm.rs  data_association.rs  factory.rs  filter.rs  gibbs_sampling.rs  lmb.rs  lmbm.rs  measurements.rs  mod.rs  murtys.rs  output.rs  prediction.rs  reporter.rs  scheduler.rs  simple_rng.rs  strategy.rs  traits.rs  types.rs  unified.rs  update.rs
src/lmbm/: association.rs  filter.rs  hypothesis.rs  mod.rs  prediction.rs  update.rs
src/multisensor_lmb/: association.rs  iterated_corrector.rs  merging.rs  mod.rs  parallel_update.rs  utils.rs
src/multisensor_lmbm/: association.rs  filter.rs  gibbs.rs  hypothesis.rs  lazy.rs  mod.rs  update.rs  workspace.rs
src/python/: birth.rs  common.rs  config.rs  convert.rs  filters.rs  intermediate.rs  mod.rs  models.rs  ops.rs  output.rs  types.rs
src/types/: config.rs  mod.rs  output.rs
src/utils/: common_ops.rs  constants.rs  gibbs.rs  hungarian.rs  lbp.rs  linalg.rs  mod.rs  prediction.rs
tests/: aa_lmb_detailed_trace.rs  aa_lmb_divergence_trace.rs  accuracy_trials.rs  bench_fixtures.rs  benchmark_fixture_equivalence.rs  check_rust_summation.rs  clutter_trials.rs  common.rs  conftest.py  cross_algorithm_validation.rs  debug.rs  debug_gibbs_test.rs  debug_murty_seed42_t64.rs  detection_trials.rs  exact_equivalence_tests.rs  extract_gated_r_t64.rs  extract_r_values_t64.rs  extract_sigma_t64.rs  gibbs_frequency.rs  integration_tests.rs  lmb.rs  map_cardinality.rs  marginal_evaluations.rs  ms_lmb.rs  ms_lmbm.rs  ms_variants.rs  multisensor_accuracy_trials.rs  multisensor_clutter_trials.rs  multisensor_detection_trials.rs  multisensor_integration_tests.rs  new_api_matlab_equivalence.rs  new_api_migration_tests.rs  numerical_equivalence_multi_sensor.rs  numerical_equivalence_single_sensor.rs  rng.rs  ss_lmb.rs  ss_lmbm.rs  step_by_step_validation.rs  test_api.py  test_compare_L.rs  (+11 more)
tests/common/: rng_equivalence.rs
tests/data/: multisensor_clutter_trial_42_quick.json  multisensor_trial_42.json  single_detection_trial_42_quick.json  single_trial_42.json
tests/debug/: sort_order.rs
tests/evaluation/: mod.rs
tests/fixtures/: README.md  bench_n10_s1_lmb_lbp.json  bench_n10_s2_aa_lmb_lbp.json  bench_n10_s2_ga_lmb_lbp.json  bench_n10_s2_ic_lmb_lbp.json  bench_n10_s2_pu_lmb_lbp.json  bench_n10_s4_aa_lmb_lbp.json  bench_n10_s4_ga_lmb_lbp.json  bench_n10_s4_ic_lmb_lbp.json  bench_n10_s4_pu_lmb_lbp.json  bench_n5_s1_lmb_lbp.json  (+16 more)
(+30 files in other folders)
