[package]
name = "prak"
version = "0.0.1"
edition = "2021"
description = "Multi-object tracking library - Rust port of multisensor-lmb-filters"
authors = ["Nathan Michlo"]
license = "MIT OR Apache-2.0"
readme = "README.md"

[lib]
name = "prak"
crate-type = ["rlib"]

[dependencies]
# Linear algebra (SIMD support via simba is included by default)
nalgebra = "0.33"

# Random number generation
rand = "0.8"
rand_distr = "0.4"

# Serialization (for test fixtures)
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Logging
log = "0.4"

# CLI (for examples)
clap = { version = "4.5", features = ["derive"] }

# Profiling (optional)
hotpath = { version = "0.7", optional = true }

# Parallelization (optional, for performance)
rayon = { version = "1.10", optional = true }

# Custom allocator (optional, for performance)
mimalloc = { version = "0.1", default-features = false, optional = true }

[dev-dependencies]
# Testing
approx = "0.5"      # Floating point comparisons
criterion = "0.5"   # Benchmarking

[features]
hotpath = ["dep:hotpath", "hotpath/hotpath"]
hotpath-alloc = ["hotpath", "hotpath/hotpath-alloc"]
mimalloc = ["dep:mimalloc"]
rayon = ["dep:rayon"]
gibbs-trace = []  # Enable Gibbs sampling access pattern tracing

[[bench]]
name = "lmb_performance"
harness = false

[profile.release]
lto = "thin"
codegen-units = 1
opt-level = 3