[package]
name = "multisensor-lmb-filters-rs"
version = "0.0.1"
edition = "2021"
rust-version = "1.70"
description = "Multi-object tracking library - Rust port of multisensor-lmb-filters"
authors = ["Nathan Michlo"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/nmichlo/multisensor-lmb-filters-rs"

[lib]
name = "multisensor_lmb_filters_rs"
crate-type = ["rlib"]

[dependencies]
# Linear algebra
nalgebra = "0.33"

# Stack-allocated small vectors
smallvec = "1.11"

# Random number generation
rand = "0.8"
rand_distr = "0.4"

# Serialization (for test fixtures)
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Logging
log = "0.4"

# CLI (for examples)
clap = { version = "4.5", features = ["derive"] }

# Profiling (optional)
hotpath = { version = "0.7", optional = true }

[dev-dependencies]
# Testing
approx = "0.5"      # Floating point comparisons
criterion = "0.5"   # Benchmarking

[features]
hotpath = ["dep:hotpath", "hotpath/hotpath"]
hotpath-alloc = ["hotpath", "hotpath/hotpath-alloc"]

[[bench]]
name = "lmb_performance"
harness = false