[package]
name = "multisensor-lmb-filters-rs"
version = "0.2.0"
edition = "2021"
rust-version = "1.70"
description = "Multi-object tracking using Labeled Multi-Bernoulli filters - Rust port of multisensor-lmb-filters"
authors = ["Nathan Michlo"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/nmichlo/multisensor-lmb-filters-rs"
keywords = ["tracking", "mot", "lmb", "kalman-filter", "sensor-fusion"]
categories = ["science", "algorithms"]

[lib]
name = "multisensor_lmb_filters_rs"
crate-type = ["cdylib", "rlib"]

[dependencies]
# Linear algebra
nalgebra = "0.33"

# Stack-allocated small vectors
smallvec = "1.11"

# Random number generation
rand = "0.8"
rand_distr = "0.4"

# Serialization (for test fixtures)
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Logging
log = "0.4"

# CLI (for examples)
clap = { version = "4.5", features = ["derive"] }

# Profiling (optional)
hotpath = { version = "0.7", optional = true }

# Python bindings (optional)
pyo3 = { version = "0.23", optional = true, features = ["extension-module", "abi3-py312", "multiple-pymethods"] }
numpy = { version = "0.23", optional = true }

[dev-dependencies]
# Testing
approx = "0.5"      # Floating point comparisons

[features]
default = []
python = ["dep:pyo3", "dep:numpy"]
hotpath = ["dep:hotpath", "hotpath/hotpath"]
hotpath-alloc = ["hotpath", "hotpath/hotpath-alloc"]

[profile.release]
lto = true
codegen-units = 1