[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "prak"
version = "0.0.1"
description = "Multi-object tracking library"
authors = [{name = "Nathan Michlo"}]
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 1 - Planning",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Rust",
    "Topic :: Scientific/Engineering",
]

[project.urls]
Homepage = "https://github.com/nmichlo/prak"
Repository = "https://github.com/nmichlo/prak"

[tool.maturin]
features = ["pyo3/extension-module"]
python-source = "python"
module-name = "prak._core"
