[build-system]
requires = ["maturin>=1.4,<2.0"]
build-backend = "maturin"

# ===== METADATA ===== #

[project]
name = "multisensor-lmb-filters-rs"
version = "0.3.0"
description = "Multi-object tracking with Labeled Multi-Bernoulli filters"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Nathan Michlo", email = "nmichlo@gmail.com" }]
keywords = ["tracking", "mot", "lmb", "kalman-filter", "sensor-fusion"]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Rust",
    "Topic :: Scientific/Engineering",
    "Typing :: Typed",
]
urls = { Homepage = "https://github.com/nmichlo/multisensor-lmb-filters-rs", Repository = "https://github.com/nmichlo/multisensor-lmb-filters-rs" }

# ===== DEPENDENCIES ===== #

requires-python = ">=3.12"
dependencies = ["numpy>=1.26"]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.0",
    "maturin>=1.4",
]

[dependency-groups]
dev = [
    "maturin>=1.10.2",
    "pytest>=9.0.1",
    "pre-commit>=4.0.0",
    "ruff>=0.8.0",
]

# ===== MATURIN ===== #

[tool.maturin]
features = ["python"]
python-source = "python"
module-name = "multisensor_lmb_filters_rs._multisensor_lmb_filters_rs"
strip = true

# ===== PYTEST ===== #

[tool.pytest.ini_options]
testpaths = ["python/tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

# ===== RUFF ===== #

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.lint.per-file-ignores]
# Test files can have unused imports (for skipped tests) and style issues
"python/tests/*.py" = ["F821", "E721", "B007", "E711", "B905", "E501", "UP038"]
# Type stubs have long signatures
"*.pyi" = ["E501"]

[tool.ruff.format]
quote-style = "double"
